--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <table cellspacing = "20">
     <tr>
-      <td><img src="images/Evangel-modified.png" alt="Evangel Opolot profile picture"></td>
+      <td><img src="Images/Evangel-modified.png" alt="Evangel Opolot profile picture"></td>
       <td>
         <h1>Evangel Opolot</h1>
         <p>Student at <em><strong><a href="https://www.lancaster.ac.uk">Lancaster University</a></strong></em></p>
